--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,118 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Base URL for IMDb advanced search\n",
+        "    base_url = \"https://www.imdb.com/search/title/?\"\n",
+        "    \n",
+        "    # Parameters for filtering movies\n",
+        "    params = {\n",
+        "        \"title_type\": title_type,  # e.g., 'feature'\n",
+        "        \"user_rating\": f\"{user_rating},\",  # e.g., '7.5,'\n",
+        "        \"release_date\": f\"{start_date},{end_date}\",  # e.g., '1990-01-01,1992-12-31'\n",
+        "        \"start\": 1,  # for pagination, starting from the first result\n",
+        "    }\n",
+        "    \n",
+        "    # List to store the movie data\n",
+        "    movies_list = []\n",
+        "    \n",
+        "    while True:\n",
+        "        # Request the page\n",
+        "        response = requests.get(base_url, params=params)\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        \n",
+        "        # Find all the movie containers\n",
+        "        movie_containers = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        \n",
+        "        if not movie_containers:\n",
+        "            break\n",
+        "        \n",
+        "        # Extract data from each movie container\n",
+        "        for i, container in enumerate(movie_containers, start=len(movies_list)+1):\n",
+        "            # Movie number\n",
+        "            movie_nr = i\n",
+        "            \n",
+        "            # Movie title\n",
+        "            title = container.h3.a.text\n",
+        "            \n",
+        "            # Year of release\n",
+        "            year = container.h3.find('span', class_='lister-item-year text-muted unbold').text\n",
+        "            \n",
+        "            # IMDb rating\n",
+        "            rating = container.strong.text if container.strong else None\n",
+        "            \n",
+        "            # Runtime\n",
+        "            runtime = container.p.find('span', class_='runtime')\n",
+        "            runtime = runtime.text.replace(' min', '') if runtime else None\n",
+        "            \n",
+        "            # Genre\n",
+        "            genre = container.p.find('span', class_='genre')\n",
+        "            genre = genre.text.strip() if genre else None\n",
+        "            \n",
+        "            # Description\n",
+        "            description = container.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "            \n",
+        "            # Director and stars\n",
+        "            crew = container.find('p', class_='')\n",
+        "            director_and_stars = [x.strip() for x in crew.text.split('|')]\n",
+        "            director = director_and_stars[0].replace('Director:', '').strip() if len(director_and_stars) > 0 else None\n",
+        "            stars = director_and_stars[1].replace('Stars:', '').strip() if len(director_and_stars) > 1 else None\n",
+        "            \n",
+        "            # Votes\n",
+        "            votes = container.find('span', attrs={'name': 'nv'})\n",
+        "            votes = votes.text.replace(',', '') if votes else None\n",
+        "            \n",
+        "            # Gross earnings\n",
+        "            gross = container.find_all('span', attrs={'name': 'nv'})\n",
+        "            gross = gross[1].text.replace(',', '').replace('$', '').replace('M', '') if len(gross) > 1 else None\n",
+        "            \n",
+        "            # Append the data to the movies list\n",
+        "            movies_list.append({\n",
+        "                \"Movie Nr\": movie_nr,\n",
+        "                \"Title\": title,\n",
+        "                \"Year\": year,\n",
+        "                \"Rating\": rating,\n",
+        "                \"Runtime (min)\": runtime,\n",
+        "                \"Genre\": genre,\n",
+        "                \"Description\": description,\n",
+        "                \"Director\": director,\n",
+        "                \"Stars\": stars,\n",
+        "                \"Votes\": votes,\n",
+        "                \"Gross ($M)\": gross\n",
+        "            })\n",
+        "        \n",
+        "        # Move to the next page\n",
+        "        params['start'] += 50  # IMDb displays 50 results per page\n",
+        "\n",
+        "    # Convert the list of movies into a DataFrame\n",
+        "    movies_df = pd.DataFrame(movies_list)\n",
+        "    \n",
+        "    return movies_df\n",
+        "\n",
+        "# Example usage\n",
+        "movies_df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "print(movies_df)\n"
       ]
     },
     {
@@ -151,18 +255,128 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
       "metadata": {
         "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Base URL for IMDb advanced search\n",
+        "    base_url = \"https://www.imdb.com/search/title/?\"\n",
+        "    \n",
+        "    # Parameters for filtering movies\n",
+        "    params = {\n",
+        "        \"title_type\": title_type,  # e.g., 'feature'\n",
+        "        \"user_rating\": f\"{user_rating},\",  # e.g., '7.5,'\n",
+        "        \"release_date\": f\"{start_date},{end_date}\",  # e.g., '1990-01-01,1992-12-31'\n",
+        "        \"start\": 1,  # for pagination, starting from the first result\n",
+        "        \"ref_\": \"adv_nxt\"  # added to handle navigation between pages\n",
+        "    }\n",
+        "    \n",
+        "    # List to store the movie data\n",
+        "    movies_list = []\n",
+        "    movie_nr = 1  # Counter for movie numbering\n",
+        "    \n",
+        "    while True:\n",
+        "        # Request the page\n",
+        "        response = requests.get(base_url, params=params)\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        \n",
+        "        # Find all the movie containers\n",
+        "        movie_containers = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        \n",
+        "        if not movie_containers:\n",
+        "            break  # If no more movies are found, break the loop\n",
+        "        \n",
+        "        # Extract data from each movie container\n",
+        "        for container in movie_containers:\n",
+        "            # Movie number\n",
+        "            movie_number = movie_nr\n",
+        "            movie_nr += 1\n",
+        "            \n",
+        "            # Movie title\n",
+        "            title = container.h3.a.text\n",
+        "            \n",
+        "            # Year of release\n",
+        "            year = container.h3.find('span', class_='lister-item-year text-muted unbold').text\n",
+        "            \n",
+        "            # IMDb rating\n",
+        "            rating = container.strong.text if container.strong else None\n",
+        "            \n",
+        "            # Runtime\n",
+        "            runtime = container.p.find('span', class_='runtime')\n",
+        "            runtime = runtime.text.replace(' min', '') if runtime else None\n",
+        "            \n",
+        "            # Genre\n",
+        "            genre = container.p.find('span', class_='genre')\n",
+        "            genre = genre.text.strip() if genre else None\n",
+        "            \n",
+        "            # Description\n",
+        "            description = container.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "            \n",
+        "            # Director and stars\n",
+        "            crew = container.find('p', class_='')\n",
+        "            director_and_stars = [x.strip() for x in crew.text.split('|')]\n",
+        "            director = director_and_stars[0].replace('Director:', '').strip() if len(director_and_stars) > 0 else None\n",
+        "            stars = director_and_stars[1].replace('Stars:', '').strip() if len(director_and_stars) > 1 else None\n",
+        "            \n",
+        "            # Votes\n",
+        "            votes = container.find('span', attrs={'name': 'nv'})\n",
+        "            votes = votes.text.replace(',', '') if votes else None\n",
+        "            \n",
+        "            # Gross earnings\n",
+        "            gross = container.find_all('span', attrs={'name': 'nv'})\n",
+        "            gross = gross[1].text.replace(',', '').replace('$', '').replace('M', '') if len(gross) > 1 else None\n",
+        "            \n",
+        "            # Append the data to the movies list\n",
+        "            movies_list.append({\n",
+        "                \"Movie Nr\": movie_number,\n",
+        "                \"Title\": title,\n",
+        "                \"Year\": year,\n",
+        "                \"Rating\": rating,\n",
+        "                \"Runtime (min)\": runtime,\n",
+        "                \"Genre\": genre,\n",
+        "                \"Description\": description,\n",
+        "                \"Director\": director,\n",
+        "                \"Stars\": stars,\n",
+        "                \"Votes\": votes,\n",
+        "                \"Gross ($M)\": gross\n",
+        "            })\n",
+        "        \n",
+        "        # Move to the next page\n",
+        "        params['start'] += 50  # IMDb displays 50 results per page\n",
+        "    \n",
+        "    # Convert the list of movies into a DataFrame\n",
+        "    movies_df = pd.DataFrame(movies_list)\n",
+        "    \n",
+        "    return movies_df\n",
+        "\n",
+        "# Example usage\n",
+        "movies_df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "print(movies_df)\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -179,9 +393,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
